// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(optimized) transpiles external stylesheets (CommonJS modules) 1`] = `
"const _defaultExport = ['div { font-size:3em; }'];
_defaultExport.__hash = '7060342740';
_defaultExport.__scoped = ['div.jsx-7060342741 { font-size:3em; }'];
_defaultExport.__scopedHash = '7060342741';


module.exports = _defaultExport; // eslint-disable-next-line import/no-extraneous-dependencies"
`;

exports[`(optimized) transpiles external stylesheets 1`] = `
"

const color = 'red'; // eslint-disable-next-line import/no-extraneous-dependencies


const bar = ['div { font-size:3em; }'];
bar.__hash = '7060342740';
bar.__scoped = ['div.jsx-7060342741 { font-size:3em; }'];
bar.__scopedHash = '7060342741';
export const uh = bar;

export const foo = [\`div { color:\${color}; }\`];

foo.__hash = '31421784000';
foo.__scoped = [\`div.jsx-31421784001 { color:\${color}; }\`];
foo.__scopedHash = '31421784001';
const _defaultExport = ['div { font-size:3em; }', \`p { color:\${color}; }\`];
_defaultExport.__hash = '40416528930';
_defaultExport.__scoped = ['div.jsx-40416528931 { font-size:3em; }', \`p.jsx-40416528931 { color:\${color}; }\`];
_defaultExport.__scopedHash = '40416528931';
export default _defaultExport;"
`;

exports[`transpiles external stylesheets (CommonJS modules) 1`] = `
"const _defaultExport = new String('div{font-size:3em}');

_defaultExport.__hash = '7060342740';
_defaultExport.__scoped = 'div.jsx-7060342741{font-size:3em}';
_defaultExport.__scopedHash = '7060342741';


module.exports = _defaultExport; // eslint-disable-next-line import/no-extraneous-dependencies"
`;

exports[`transpiles external stylesheets 1`] = `
"

const color = 'red'; // eslint-disable-next-line import/no-extraneous-dependencies


const bar = new String('div{font-size:3em}');
bar.__hash = '7060342740';
bar.__scoped = 'div.jsx-7060342741{font-size:3em}';
bar.__scopedHash = '7060342741';
export const uh = bar;

export const foo = new String(\`div{color:\${color}}\`);

foo.__hash = '31421784000';
foo.__scoped = \`div.jsx-31421784001{color:\${color}}\`;
foo.__scopedHash = '31421784001';

const _defaultExport = new String(\`div{font-size:3em}p{color:\${color}}\`);

_defaultExport.__hash = '40416528930';
_defaultExport.__scoped = \`div.jsx-40416528931{font-size:3em}p.jsx-40416528931{color:\${color}}\`;
_defaultExport.__scopedHash = '40416528931';
export default _defaultExport;"
`;
